--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,61 @@ body {
 .container {
   padding: 0 32px;
   margin: 60px 80px;
+  height: 100%;
   border: 1px solid blue;
+}
+
+.flex-wrapper {
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  cursor: pointer;
+}
+
+.title {
+  font-size: 48px;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+.title-extra-bold {
+  font-weight: 800;
+}
+
+.title-outlined-extra-bold {
+  font-weight: 800;
+  color: #fff;
+  -webkit-text-stroke: 6px black;
+  paint-order: stroke fill;
+}
+
+.paragraph {
+  color: #71717a;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.link-button {
+  width: 56px;
+  height: 56px;
+
+  background-color: #ffffff;
+  border-color: #000000;
+  border-radius: 4px;
+
+  margin-right: 32px;
 }
 
 /* header */
@@ -25,19 +79,7 @@ body {
   border: 1px solid red;
 }
 
-.flex-header-wrapper {
-  display: flex;
-  height: 100%;
-  justify-content: space-between;
-  align-items: center;
-}
-
 header ul {
-  /* border: 1px solid green; */
-  list-style: none;
-
-  display: flex;
-  justify-content: space-between;
   margin-right: 16px;
 }
 
@@ -57,7 +99,7 @@ header a {
   margin-right: 0;
 }
 
-.resume-button {
+.header-resume-button {
   display: flex;
   align-items: center;
   border: none;
@@ -70,14 +112,49 @@ header a {
   font-weight: 600;
   text-transform: capitalize;
   letter-spacing: 0.02em;
-
-  cursor: pointer;
 }
 
-.resume-button-icon {
+.header-resume-button-icon {
   margin-left: 8px;
 }
 
-/* .black-background {
-  background-color: #000000;
-} */
+/* main */
+.main-container {
+  padding: 0 0 0 32px;
+  margin: 60px 80px;
+  height: 100%;
+  border: 1px solid blue;
+}
+
+.main-info {
+  height: 610px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.main-info div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content:end;
+}
+
+.main-info div h1 {
+  margin-bottom: 32px;
+  line-height: 1.5;
+}
+.main-info div p {
+  margin-bottom: 64px;
+}
+
+.main-flex-button-wrapper {
+  justify-content: left;
+  margin-top: auto;
+  margin-bottom: 6px;
+}
+
+.main-img {
+  height: 610px;
+}
+
