--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 .container {
   padding: 0 32px;
-  margin: 60px 80px;
+  margin: 120px 80px;
   height: 100%;
   border: 1px solid blue;
 }
@@ -34,6 +34,7 @@ ul {
 
 button {
   cursor: pointer;
+  box-shadow: none;
 }
 
 .title {
@@ -70,6 +71,20 @@ button {
   border-radius: 4px;
 
   margin-right: 32px;
+}
+
+.link-button:hover {
+  background-color: #000000;
+  border: none;
+}
+
+.button-icon .card-img {
+  filter: invert(0);
+  transition: filter 0.3s ease;
+}
+
+.link-button:hover .button-icon {
+  filter: invert(1);
 }
 
 /* header */
