--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ button {
   text-transform: capitalize;
 }
 
+.center-title {
+  margin: 20px 0;
+  text-align: center;
+}
+
 .title-extra-bold {
   font-weight: 800;
 }
@@ -67,7 +72,7 @@ button {
   height: 56px;
 
   background-color: #ffffff;
-  border-color: #000000;
+  border: 2px solid #000000;
   border-radius: 4px;
 
   margin-right: 32px;
@@ -78,7 +83,7 @@ button {
   border: none;
 }
 
-.button-icon .card-img {
+.button-icon {
   filter: invert(0);
   transition: filter 0.3s ease;
 }
@@ -152,7 +157,7 @@ header a {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content:end;
+  justify-content: end;
 }
 
 .main-info div h1 {
@@ -173,3 +178,51 @@ header a {
   height: 610px;
 }
 
+/* skills */
+.card-flex-wrapper {
+  margin-top: 20px;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 40px;
+}
+.card {
+  background-color: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 4px;
+
+  margin: 20px 0;
+  padding: 37px 24px;
+  width: 186px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.card-img {
+  margin-bottom: 32px;
+  height: 56px;
+}
+
+.card-title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.card:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.card-img {
+  filter: invert(0);
+  transition: filter 0.3s ease;
+}
+
+.card:hover .card-img {
+  filter: invert(1);
+}
