--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   line-height: 1.2;
   letter-spacing: -0.02em;
   color: #000000;
+  background-color: #ffffff;
 }
 
 .container {
@@ -17,6 +18,28 @@ body {
   margin: 120px 80px;
   height: 100%;
   border: 1px solid blue;
+}
+
+.white {
+  color: #ffffff;
+}
+.black-container-next {
+  margin-bottom: 60px;
+}
+.black-container-before {
+  margin-top: 60px;
+}
+.black-background {
+  margin: 60px 0;
+  height: 100%;
+  width: 100%;
+  background-color: #000000;
+}
+.black-background-container {
+  padding: 60px 32px;
+  margin: 60px 80px;
+  height: 100%;
+  border: 1px solid yellow;
 }
 
 .flex-wrapper {
@@ -225,4 +248,10 @@ header a {
 
 .card:hover .card-img {
   filter: invert(1);
+}
+
+/* experience */
+.black-background {
+  background-color: #000000;
+  width: 100%;
 }
