--- a/css/style.css
+++ b/css/style.css
@@ -20,28 +20,6 @@ body {
   border: 1px solid blue;
 }
 
-.white {
-  color: #ffffff;
-}
-.black-container-next {
-  margin-bottom: 60px;
-}
-.black-container-before {
-  margin-top: 60px;
-}
-.black-background {
-  margin: 60px 0;
-  height: 100%;
-  width: 100%;
-  background-color: #000000;
-}
-.black-background-container {
-  padding: 60px 32px;
-  margin: 60px 80px;
-  height: 100%;
-  border: 1px solid yellow;
-}
-
 .flex-wrapper {
   display: flex;
   height: 100%;
@@ -113,6 +91,28 @@ button {
 
 .link-button:hover .button-icon {
   filter: invert(1);
+}
+
+.white {
+  color: #ffffff;
+}
+.black-container-next {
+  margin-bottom: 60px;
+}
+.black-container-before {
+  margin-top: 60px;
+}
+.black-background {
+  margin: 60px 0;
+  height: 100%;
+  width: 100%;
+  background-color: #000000;
+}
+.black-background-container {
+  padding: 60px 32px;
+  margin: 60px 80px;
+  height: 100%;
+  border: 1px solid yellow;
 }
 
 /* header */
@@ -220,6 +220,8 @@ header a {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .card-img {
@@ -255,3 +257,66 @@ header a {
   background-color: #000000;
   width: 100%;
 }
+
+.experience-flex-wrapper {
+  flex-direction: column;
+  margin: 40px 24px;
+  gap: 32px;
+}
+
+.experience-card {
+  background-color: #000000;
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+
+  padding: 30px 24px;
+  width: 100%;
+
+  transition: background-color 0.3s ease;
+}
+
+.experience-info-flex-wrapper {
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+
+  margin-bottom: 28px;
+}
+.experience-info-flex-wrapper h4 {
+  width: 150%;
+  text-align: left;
+
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28px;
+}
+
+.experience-info-flex-wrapper p {
+  text-align: right;
+  width: 50%;
+
+  text-transform: capitalize;
+
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  color: #D4D4D8;
+}
+
+.experience-card p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #D4D4D8;
+}
+.experience-card img {
+  height: 32px;
+}
+
+.experience-card:hover {
+  background-color: #27272a;
+}
+
