--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ button {
   color: #71717a;
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 24px;
   letter-spacing: 0.02em;
 }
 
@@ -197,9 +197,9 @@ header a {
   margin-bottom: 6px;
 }
 
-.main-img {
+/* .main-img {
   height: 610px;
-}
+} */
 
 /* skills */
 .card-flex-wrapper {
@@ -306,10 +306,6 @@ header a {
 }
 
 .experience-card p {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.02em;
   color: #D4D4D8;
 }
 .experience-card img {
@@ -320,3 +316,23 @@ header a {
   background-color: #27272a;
 }
 
+/* about me */
+
+.about-me-info-flex-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  margin-left: 80px;
+  text-align: left;
+}
+
+.about-me-info-flex-wrapper h1 {
+  padding: 20px 0;
+}
+.about-me-info-flex-wrapper div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
