--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,8 @@ button {
 }
 
 header ul {
-  margin-right: 16px;
+  gap: 32px;
+  margin: 0 60px;
 }
 
 header a {
@@ -132,14 +133,6 @@ header a {
   color: #000000;
   font-size: 20px;
   font-weight: 600;
-
-  margin: 0 16px;
-}
-.header-nav-a-left {
-  margin-left: 0;
-}
-.header-nav-a-right {
-  margin-right: 0;
 }
 
 .header-resume-button {
@@ -163,43 +156,32 @@ header a {
 
 /* main */
 .main-container {
-  padding: 0 0 0 32px;
-  margin: 60px 80px;
-  height: 100%;
-  border: 1px solid blue;
+  margin-top: 84px;
 }
 
-.main-info {
-  height: 610px;
+.main-info-flex-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
+  gap: 60px;
 }
 
-.main-info div {
-  height: 100%;
+.main-info-flex-wrapper div {
+  padding: 20px 0;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  gap: 32px;
 }
 
-.main-info div h1 {
-  margin-bottom: 32px;
+.main-info-flex-wrapper div h1 {
   line-height: 1.5;
 }
-.main-info div p {
-  margin-bottom: 64px;
-}
 
-.main-flex-button-wrapper {
+.main-button-flex-wrapper {
   justify-content: left;
-  margin-top: auto;
+  /* margin-top: auto; */
   margin-bottom: 6px;
 }
-
-/* .main-img {
-  height: 610px;
-} */
 
 /* skills */
 .card-flex-wrapper {
@@ -302,11 +284,11 @@ header a {
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
-  color: #D4D4D8;
+  color: #d4d4d8;
 }
 
 .experience-card p {
-  color: #D4D4D8;
+  color: #d4d4d8;
 }
 .experience-card img {
   height: 32px;
