--- a/css/style.css
+++ b/css/style.css
@@ -318,3 +318,17 @@ header a {
   justify-content: space-between;
   gap: 20px;
 }
+
+
+
+
+.footer-container {
+  padding: 0 32px;
+  margin: 0 80px;
+  border: 1px solid red;
+}
+.footer-black-background{
+  height: 100%;
+  width: 100%;
+  background-color: #000000;
+}
