--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,8 @@ header a {
 .input-area {
   gap: 20px;
 }
-.input-area input, textarea {
+.input-area input,
+textarea {
   height: 56px;
   width: 500px;
   border-radius: 4px;
@@ -456,7 +457,7 @@ header a {
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
-  color: #71717A;
+  color: #71717a;
 }
 
 .input-area .large {
@@ -471,18 +472,18 @@ header a {
 }
 
 .contact-button {
-padding: 16px 20px;
-border-radius: 4px;
-border: none;
-background-color: #000000;
-color: #ffffff;
+  padding: 16px 20px;
+  border-radius: 4px;
+  border: none;
+  background-color: #000000;
+  color: #ffffff;
 
-font-size: 20px;
-line-height: 24px;
-letter-spacing: 0.02em;
-font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  font-weight: 600;
 
-align-items: center;
+  align-items: center;
 }
 
 .text-area {
@@ -505,8 +506,6 @@ align-items: center;
   margin-left: 120px;
 }
 
-
-
 /* footer */
 .footer-container {
   padding: 24px 32px;
@@ -525,4 +524,15 @@ align-items: center;
   justify-content: space-between;
   align-items: end;
   gap: 12px;
+}
+
+/* adaptive layout */
+@media screen and (max-width: 1024px) {
+  
+  .main-container .flex-wrapper {
+    flex-direction: column-reverse;
+  }
+  .main-img {
+    margin-bottom: 48px;
+  }
 }
